--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
 
   "dependencies": {
-    "express": "~3.4.4"
+    "express": "~3.4.4",
+    "html-pdf": ">=1.0"
   },
   "devDependencies": {},
   "bundleDependencies": [],
